--- a/index.html
+++ b/index.html
@@ -11,49 +11,57 @@
 
 <body>
 
-    <section class="about">
+    <div class="main">
+        <section class="about">
 
-        <nav class="main-nav">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                </ul>
+            </nav>
 
-        <div class="details">
-            <h1>Gautham R</h1>
-            <h2>developer, designer, learner</h2>
-            <p>
-                I am a full-stack developer and a ui designer, with good practical knowledge in web development,
-                node.js,
-                android app development and more. I am very enthusiastic about new technology, and I love to create new
-                things, whether it is a website, android app, a backend, or even music.
-            </p>
-        </div>
-    </section>
-
-    <section class="contact">
-
-        <div class="details">
-            <div class="contact-details">
-                <h1>Contact me:</h1>
+            <div class="summary">
+                <h1>Gautham R</h1>
+                <h2>developer, designer, learner</h2>
                 <p>
-                    <strong>Email:</strong> rgautham3110@gmail.com <br>
-                    <strong>Phone:</strong> +91 637 924 1236 <br>
+                    I am a full-stack developer and a ui designer, with good practical knowledge in web development,
+                    node.js,
+                    android app development and more. I am very enthusiastic about new technology, and I love to create
+                    new
+                    things, whether it is a website, android app, a backend, or even music.
                 </p>
             </div>
-            <div class="social-media">
-                <a href="https://www.github.com/rgautham3110" target="_blank"><img src="./images/github.png" alt="github" id="github"></a>
-                <a href="https://www.instagram.com/rgautham3110/" target="_blank"><img src="./images/instagram.png" alt="instagram" id="instagram"></a>
-                <a href="https://www.facebook.com/rgautham3110" target="_blank"><img src="./images/facebook.png" alt="facebook" id="facebook"></a>
-                <a href="https://www.linkedin.com/in/gautham-ramesh-babu-376437166/" target="_blank"><img src="./images/linkedin.png" alt="linkedin" id="linkedin"></a>
+
+        </section>
+
+
+        <section class="contact">
+
+            <img src="./images/profile_picture.png" alt="profile_picture" class="profile-picture">
+
+            <div class="personal-contact">
+                <h1>Contact me:</h1>
+                <p><strong>Email: </strong> rgautham3110@gmail.com</p>
+                <p><strong>Phone: </strong> +91 637 924 1236</p>
             </div>
-        </div>
+            <div class="social-media">
+                <a href="#"><img src="./images/github.png" alt="github"></a>
+                <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
+                <a href="#"><img src="./images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
+            </div>
 
-    </section>
+        </section>
+    </div>
 
-    <img src="./images/Profile-Picture.png" alt="Profile-Picture" id="profile-picture">
+
+
+    <footer>
+        <p>A personal project to showcase my ability     |     Designed using Flexbox</p>
+    </footer>
+
 </body>
 
 </html>
