made links open in new tab and made navigation bar centred

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <p><strong>Phone: </strong> +91 637 924 1236</p>
             </div>
             <div class="social-media">
-                <a href="https://github.com/rgautham3110"><img src="./images/github.png" alt="github"></a>
-                <a href="https://www.instagram.com/rgautham3110/"><img src="./images/instagram.png" alt="instagram"></a>
-                <a href="https://www.linkedin.com/in/gautham-ramesh-babu-376437166/"><img src="./images/linkedin.png" alt="linkedin"></a>
-                <a href="https://www.facebook.com/rgautham3110"><img src="./images/facebook.png" alt="facebook"></a>
+                <a href="https://github.com/rgautham3110" target="_blank"><img src="./images/github.png" alt="github"></a>
+                <a href="https://www.instagram.com/rgautham3110/" target="_blank"><img src="./images/instagram.png" alt="instagram"></a>
+                <a href="https://www.linkedin.com/in/gautham-ramesh-babu-376437166/" target="_blank"><img src="./images/linkedin.png" alt="linkedin"></a>
+                <a href="https://www.facebook.com/rgautham3110" target="_blank"><img src="./images/facebook.png" alt="facebook"></a>
             </div>
 
         </section>
