Changed summary text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     node.js,
                     android app development and more. I am very enthusiastic about new technology, and I love to create
                     new
-                    things, whether it is a website, android app, a backend, or even music.
+                    things, whether it is a website, an android app, a backend, or even some music occasionally.
                 </p>
             </div>
 
